fixed alignment

--- a/src/styles/module/page/landing/ourservices.scss
+++ b/src/styles/module/page/landing/ourservices.scss
@@ -8,13 +8,15 @@
 
 .ourservices-content {
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
     gap: 30px; // student-banner
 
     .student-banner {
         background-color: #13C9BF;
         border-radius: 24px;
         display: flex;
+        justify-content: center;
+        align-items: end;
 
         .banner-image {
             // margin-top: 52px;
@@ -25,7 +27,7 @@
                 position: absolute;
                 bottom: 0;
                 left: -60px;
-                // object-fit: contain;
+                object-fit: contain;
                 margin-bottom: 0;
             }
 
@@ -42,10 +44,8 @@
 
 
             div {
-                margin: 52px 46px 0 0;
                 text-align: right;
-                padding: 46px 46px 72px 0;
-
+                padding: 0 46px 72px 0;
 
                 h2 {
                     font-family: Lora;
@@ -74,25 +74,24 @@
                     color: #1C1C1C !important;
                 }
 
-                button {
-                    padding: 12px 24px 12px 24px;
-                    gap: 10px;
-                    border-radius: 12px;
+                div {
+                    margin: 26px auto 72px auto;
+
+                    button {
+                        padding: 12px 24px 12px 24px;
+                        gap: 10px;
+                        border-radius: 12px;
+                        opacity: 0px;
+                        background: #1C1C1C;
+                        color: #fff;
+                        //styleName: Button Text;
+                        font-family: Lora;
+                        font-size: 20px;
+                        font-weight: 700;
+                        line-height: 34px;
 
 
-                    opacity: 0px;
-                    background: #1C1C1C;
-                    color: #fff;
-                    //styleName: Button Text;
-                    font-family: Lora;
-                    font-size: 20px;
-                    font-weight: 700;
-                    line-height: 34px;
-
-
-
-
-
+                    }
                 }
             }
 
